# MCP-Game

./: .gitignore  README.md  requirements.txt
client/: client.py  game_client.py
client-old/: client.py  pyproject.toml
server/: behind_bars_fastapi_server.py  behind_bars_server.py  game_server.py  main.py  pyproject.toml
server-old/: pyproject.toml  server1.py
