[project]
name = "mcp-game-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "fastapi-mcp>=0.4.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.11.0",
    "pillow>=11.3.0",
    "uvicorn>=0.35.0",
]
